# estoque_infos

./: .gitignore  README.md  db_config.py  db_extract.py  main.py  pyproject.toml  streamlit.py
data/: estoqueSae.csv  ppg_sae_2026.csv
