[project]
name = "streamlit-sae"
version = "0.1.0"
description = ""
authors = [
    {name = "Paulo Cardoso",email = "cardosopaulohenrique91@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "streamlit (>=1.44.0,<2.0.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "pyodbc (>=5.2.0,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

